fixed single product wrap styles

--- a/style.css
+++ b/style.css
@@ -549,23 +549,19 @@ option {
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
   visibility: visible;
 }
-.product_desc {
+.product-desc {
   position: relative;
 }
-.product_desc hr {
-	margin-top: 5px;
-	margin-bottom: 0px;
-}
-.product_desc .manufacturer {
+.product-desc .product-manufacturer {
 	color: #808080;
 	font-size: 12px;
 }
-.product_desc .price {
-	font-size: 24px;
-}
-.product_desc .product_name {
+.product-desc .product-name {
 	color: #0673ca;
 	font-size: 14px;
+}
+.product-desc .product-price {
+	font-size: 20px;
 }
 .tab-content {
 	padding-top: 5px;
